MB-10875: fix flusher stat via checkpoint queue

In Checkpoint's queueDirty, check for checkpoint start message
to ensure that we do not decrement persistence cursor for an
existing item. We also should not consider checkpoint start/end
items in incrementing / decrementing a cursor offset.

Correct stat to totalEnqueued in queueBackfill.

Change-Id: Ibaa6d2b19de1034b4ca96ea8b5bd3ba78d08d4f4
Reviewed-on: http://review.couchbase.org/36154
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>